# PathSense-Collector

./: .gitignore  README.md  pathsense-collector  setup.py
CollectorScript/: image_record.py  main.py
CollectorScript/dependencies/: camera_threading.py
legacy/: setup.py
legacy/CollectorScript/: main.py
legacy/setup_sh/: install.sh  stop.sh
pathsense_collector/: Cargo.toml
pathsense_collector/src/: utils.rs
pathsense_collector/src/utils/: camera_thread.rs
setup_sh/: install.sh  remove_from_boot.sh  update.sh
sh/: install.sh  remove.sh  run.sh  stop.sh  update.sh
source/: build.sh  pathsense-collector  pathsense-collector.rs
source/pathsense_collector/: Cargo.toml  build.sh
source/pathsense_collector/src/: main.rs
source/pathsense_collector/src/camera/: mod.rs  test.rs
